--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -144,7 +144,7 @@ We focus on five key themes (Fig. `r fig_schematic`):
 (5) tree and ecosystem ecology.
 We then consider the implications for understanding forest responses to global change, including how these responses scale across space and time. 
 
-![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests according to (1) biophysical environment, (2) leaf temperature ($T_{leaf}$), (3) leaf traits, (4) leaf metabolism, and (5) tree and ecosystem ecology.** Abbreviations are as follows: VPD: vapor pressure deficit;  $T_{leaf}$ - $T_{air}$: leaf-to-air temperature difference; LMA: leaf mass per area, VAZ: violaxanthin, antheraxanthin and zeaxanthin concentrations, VOC: volatile organic compounds; T sensitivity: temperature sensitivity; ET: evapotranspiration. Here, we summarize conditions in closed-canopy forests during growing season and daytime conditions; patterns tend to be weaker, or sometimes reversed, in more open forests, when canopy trees are seasonally deciduous, or at nighttime. Arrows indicate direction of increase, with double-pointed arrows indicating that the direction of the trend is uncertain or inconsistent.](schematics/Schematic figure 1.png)
+![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests according to (1) biophysical environment, (2) leaf temperature ($T_{leaf}$), (3) leaf traits, (4) leaf metabolism, and (5) tree and ecosystem ecology.** Abbreviations are as follows: $T_{air}$: air temperature, VPD: vapor pressure deficit;  $T_{leaf}$ - $T_{air}$: leaf-to-air temperature difference; LMA: leaf mass per area, VAZ: violaxanthin, antheraxanthin and zeaxanthin concentrations, VOC: volatile organic compounds; T sensitivity: temperature sensitivity; ET: evapotranspiration. Here, we summarize conditions in closed-canopy forests during growing season and daytime conditions; patterns tend to be weaker, or sometimes reversed, in more open forests, when canopy trees are seasonally deciduous, or at nighttime. Arrows indicate direction of increase, with double-pointed arrows indicating that the direction of the trend is uncertain or inconsistent.](schematics/Schematic figure 1.png)
 
 
 # II. Review of vertical gradients
@@ -223,7 +223,7 @@ Sensible heat flux between leaf and air is regulated by leaf boundary layer cond
 Latent heat flux ($\lambda E$) through transpiration has a strong cooling effect, and is determined by stomatal and boundary layer conductances ($g_s$ and $g_b$) and VPD:$g_b$ increases with wind speed, and $g_s$ generally declines as VPD increases due to stomatal closure [@darwinIXObservationsStomata1898; @mottStomatalResponsesHumidity1991].
 Therefore, $T_{leaf}-T_{air}$ decreases in magnitude with wind speed [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999], increases with RH (Fig. `r fig_leaf_T`c), increases with leaf size (Fig. `r fig_leaf_T`d), and $T_{leaf}$ decreases absolutely with $g_s$ (Fig. `r fig_leaf_T`e).
 
-![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{Leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf characteristic dimension, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under both moist and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values illustrated by dots and given in the table of biophysical constants. Biohphysical constants in the the table include: shortwave radiation (swr), wind speed (ws), relative humidity (rh), cleaf characteristic dimension (lcd), stomatal conductance (gs), air temperature (tair). ](leaf_energy_balance/fig3_leafenergy.png)
+![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{Leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf characteristic dimension, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under hypothetical moist and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. Dots along each line correspond to the biophysical constant assigned for the independent variable in the other scenarios, and therefore represent the modeled value for $T_{Leaf}-T_{air}$ with all parameters set to the biophysical constants given in the table. Biohphysical constants in the the table include: shortwave radiation (swr), wind speed (ws), relative humidity (rh), cleaf characteristic dimension (lcd), stomatal conductance (gs), air temperature (tair). ](leaf_energy_balance/fig3_leafenergy.png)
 
 Under hot and dry conditions, leaves face a trade-off between $T_{leaf}$ regulation and water conservation [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. 
 With adequate water, high $\lambda E$ can facilitate heat dissipation, particularly for leaves with smaller size (higher $g_b$) [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts2021a; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
@@ -259,16 +259,17 @@ However, the opposite trend was observed for a lone tree surrounded by grass in 
 <!--Lawren's paragraph for R2 comments on having older citations and connecting to newer work-->
 Leaf traits vary vertically across forest strata at anatomical, structural and biochemical levels [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping $T_{leaf}$, leaf metabolism, and leaf thermal sensitivity across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a;  @zwienieckiHydraulicLimitationsImposed2004]. 
 This vertical variation in leaf structure and composition has been long recognized, with sun and shade leaf traits distinguished for more than 100 years [@haberlandtPhysiologicalPlantAnatomy1914; @salisburyCausesEcologicalSignificance1928].
-Early work attributed differences among leaves to sun versus shade [@wyliePrinciplesFoliarOrganization1951; @vogelSunLeavesShade19688] and this tendency grew given the parallel differences observed as for plants grown in sun versus shade conditions [@boardmanComparativePhotosynthesisSun1977; @abramsLeafStructuralCharacteristics1990].
-More recent work has included a focus not only on shade, but also on leaf height in the canopy as important in determining differences in mature leaf structure and function, as leaf traits may partially mitigate the effects of gravity and hydraulic pathlength that would affect leaves higher up in the canopy [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006].
+Early work attributed differences among leaves to sun versus shade [@wyliePrinciplesFoliarOrganization1951; @vogelSunLeavesShade19688], and this tendency grew given the parallel differences observed for plants grown in sun versus shade conditions [@boardmanComparativePhotosynthesisSun1977; @abramsLeafStructuralCharacteristics1990].
+More recent work has included a focus not only on light, but also on leaf height in the canopy, as important in determining differences in mature leaf structure and function, as leaf traits may partially mitigate the effects of gravity and hydraulic pathlength that would affect leaves higher up in the canopy [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006].
 For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022].
 Thus, leaves develop differently throughout the canopy according to the irradiance and hydraulic stress associated with their canopy location, height and evaporative load, with additional potential influences of the ontogenetic stage of the branches [Table `r table_leaf_traits`; @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a; @casasSunShadeLeaves2011;  @keenanGlobalLeafTrait2016; @binLeafTraitExpression2022; @sackHowStrongIntracanopy2006; @chenLeafEconomicsSpectrum2020; **Niinemets et al., 2015a**].
 Plasticity throughout the canopy may emerge during new leaf development with leaves being influenced by information from adjacent mature leaves or apical meristem, including  (e.g., for deciduous species expanding leaves) a “memory” of previous conditions in that location, and may also acclimate during and after expansion to to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004].
 Overall, leaves may optimize their biochemical, anatomical and structural traits according to their light environment and height (**cite Niinemets papers on this, as well as Japanese papers on N allocation throughout the canopy**). 
 Yet, while these studies have clarified many details of leaf differences throughout the canopy, no papers have integrated the many differences in leaf traits throughout the canopy in a cohesive framework.
-Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004, @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020], and as canopy shade is known to alter these trait relationships (**Osnas et al. 2018 PNAS**), further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
+Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004, @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020]. 
+As canopy shade is known to alter these trait relationships (**Osnas et al. 2018 PNAS**), further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
 
-Across the vertical gradient, traits vary (1) within individuals, with height and across shaded and sunny positions [e.g., @example_within-individual_references], (2) across individuals of the same species, often representing an ontogenetic trajectory from the understory to the canopy [e.g., @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a], and (3) across canopy and understory species [e.g., @example_interspecific_references]. 
+Across the vertical gradient, traits vary (1) within individuals, across height and light gradients [e.g., @example_within-individual_references], (2) across individuals of the same species, often representing an ontogenetic trajectory from the understory to the canopy [e.g., @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a], and (3) across understory and canopy species [e.g., @example_interspecific_references]. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table `r table_leaf_traits`).
 Generally, the pattern of fundamental trait adaptations to light gradients across forest species is similar to within-species trends in traits and sometimes metabolism [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @binLeafTraitExpression2022; @cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010]; however, vertical trends vary across trees [@lloydOptimisationPhotosyntheticCarbon2010], and counter-gradient variation can exist [e.g., @luskWhyAreEvergreen2008].
 Overall, when it comes to understanding and modeling forest ecosystem function, many leaf physiological parameters can be estimated based on foliage height profiles [e.g., @cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010].
@@ -292,11 +293,10 @@ Table `r table_leaf_traits`, cont.
 
 $\dagger$ Forest types are coded as follows: TrB = tropical broadleaf; TeB = temperate broadleaf; TeN = temperate needleleaf (conifer); BoN= boreal needleleaf (conifer).
 
+<!--refs in this table are in the nocite field at top of document-->
 $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 4. Chin and Sillett 2019; 5. Wyka et al. 2012; 6. Atherton et al. 2017; 7. Kenzo et al. 2015; 8. Kusi and Karasi 2020; 9. Dang et al. 1997; 10. Gebauer et al. 2015; 11. Marenco et al. 2017; 12. Kafuti et al. 2020; 13. Van Wittenberghe et al. 2012; 14. Zhang et al. 2019; 15. Weerasinghe et al. 2014; 16. Oldham et al. 2010; 17. Ichie et al. 2016; 18. Gregoriou et al. 2007; 19. Levizou et al. 2005; 20. Liakoura 1997; 21. Fauset et al. 2018; 22. Niinemets et al. 1998, 23. Ishida et al. 1998; 24. Millen and Clendon 1979; 25. Smith and Carter, 1988; 26. Hadley and Smith 1987; 28. Baltzer and Thomas 2005; 29. Coble et al. 2016; 30. Scartazza et al. 2016; 31. Duursma and Marshall, 2006; 32. Harley et al. 1996;  33. Hernandez et al. 2020; 34. Turnbull et al. 2003; 35. Chen et al. 2020; 36. van de Weg et al. 2012; 37. M.A Cavaleri et al. 2008;  38. Koniger et al. 1995; 39. Mastubara et al. 2009; 40. Harris and Medina 2013; 41. Hansen et al. 2001; 42. Poorter et al. 1995; 43. Coble et al. 2016; 44. Niinemets et al. 2004; 45. Poorter et al. 2000; 46. Zwieniecki et al. 2004; 47. Sack and Scoffoni, 2013; 48. Ball et al., 1988; 49. Taylor et al. 2021; 50. Niinemets et al. 2010; 51. Brooks et al. 1997; 52. Curtis et al. 2019; 53. Slot et al. 2019; 54. Hamerlynck and Knapp 1994; 55. Lloyd et al. 2010; 56. Augspurger and Bartlett, 2003; 57. Osada et al. 2001; 58. Meakem et al. 2018; 59. Condit et al. 2000; 60. Harley et al. 1997; 61. Niinemets and Sun, 2014; 62. Sharkey and Monson, 2014; 63. Simpraga et al. 2013
-```{r eval=FALSE, echo=FALSE}
-# refs in this table currently in the nocite field at top of document 
-```
 
+\newpage
 
 ## 3.1 Leaf anatomy and morphology
 
@@ -310,20 +310,20 @@ In open canopies, where light is comparatively homogeneous, leaf traits may be m
 
 ## 3.2. Leaf optical properties
 <!---need to cut parts of this paragraph or merge into 3.1?-->
-Leaf optical properties of leaves are influenced by a combination of anatomical, morphological, and biochemical traits that vary vertically, as outlined above.
-Along the vertical light gradient, leaf light absorptance is balanced with $T_{leaf}$ regulation, where excess light can impair photosynthetic machinery (see below), and is only modestly greater in sun leaves or mid-canopy leaves than shade leaves. 
-In higher light environment, PAR absorptance and thus heat load is reduced by reflecting light through leaf surface modifications as mentioned above, such as trichome and cuticle layer, or through biochemically dissipating heat through caretenoid concentrations [Table `r table_leaf_traits`, @knappVariabilityLeafOptical1998; @leeCorrelatesLeafOptical1990].
+Leaf optical properties are influenced by a combination of anatomical, morphological, and biochemical traits that vary vertically, as outlined in sections 3.1 and 3.3.
+Along the vertical light gradient, leaf light absorptance is balanced with $T_{leaf}$ regulation, where excess light can impair photosynthetic machinery (see sections 3.4 and 3.5), and is only modestly greater in sun leaves or mid-canopy leaves than shade leaves (Table `r table_leaf_traits`). 
+In higher light environment, PAR absorptance and thus heat load is reduced by reflecting light through leaf surface modifications as mentioned above, such as trichome and cuticle layer, or through biochemically dissipating heat through caretenoid concentrations [Table `r table_leaf_traits`, @leeCorrelatesLeafOptical1990; @knappVariabilityLeafOptical1998].
 Further, there is less need for light absorption efficiency, but greater need to channel the higher availability of light into deeper cell layers through "light pipes" or palisade layers that increase path length for light penetration, contributing to higher photosynthetic capacity.
 The thickness of sun leaves also reduces light transmittance or light scattered after entering the leaf more than in shade leaves [@poorterLeafOpticalProperties1995; @leeCorrelatesLeafOptical1990].
-However, in the understory or shade regions where PAR is more limiting, leaf light absorption efficiency is greater, enhanced by shade leaves maintaining higher SLA, denser layers of chloroplasts, shorter, fewer layers of conical palisade cells, higher nitrogen, and chlorophyll per unit biomass that exemplifies optical absorption capabilities, resulting in similar chlorophyll concentration per unit area as in sun leaves. 
-Therefore, shade leaves can have comparable light harvesting capabilities as in sun leaves, and higher absorption efficiency per unit biomass [@poorterLeafOpticalProperties1995; @poorterLeafOpticalProperties2000; @leeCorrelatesLeafOptical1990]. 
+However, in the understory or shade regions where PAR is more limiting, leaf light absorption efficiency is greater, enhanced by shade leaves maintaining higher SLA, denser layers of chloroplasts, shorter, fewer layers of conical palisade cells, higher nitrogen, and chlorophyll per unit biomass that exemplifies optical absorption capabilities, resulting in similar chlorophyll concentration per unit area as in sun leaves (Table `r table_leaf_traits`). 
+Therefore, shade leaves can have light harvesting capabilities comparable to those of sun leaves, with higher absorption efficiency per unit biomass [@poorterLeafOpticalProperties1995; @poorterLeafOpticalProperties2000; @leeCorrelatesLeafOptical1990]. 
 Thus, while canopy leaves tend to invest more energy in metabolic activity and heat dissipation, understory leaves invest in light capture.
 
 ## 3.3. Metabolic capacity and efficiency
 
 Most leaf biochemical traits also vary across light and height gradients (Table `r table_leaf_traits`), both shaping and resulting from gradients in metabolism (see section 4, Table `r table_leaf_metabolism`).
 Sun leaves have higher concentrations (per unit area) of elements such as nitrogen ($N_{area}$) and phosphorus ($P_{area}$) that are critical to leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes [@scartazzaInvestigatingEuropeanBeech2016a; @niinemetsPhotosyntheticAcclimationSimultaneous2004; @weerasingheCanopyPositionAffects2014].
-Increases in chlorophyll a/b ratios with height reflect the greater light availability in the upper canopy, while greater chlorophyll concentrations at lower heights within the forest vertical profile give shade leaves greater PAR absorptance efficiency (Table `r table_leaf_traits`).
+Increases in chlorophyll a/b ratios with height reflect the greater light availability in the upper canopy, while greater chlorophyll concentrations at lower heights within the forest vertical profile contribute to the reater PAR absorptance efficiency of shade leaves (Table `r table_leaf_traits`).
 Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies (see section 4, Table `r table_leaf_metabolism`) compared to shaded lower canopies, result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C isotopic ratios in leaf tissues (Table `r table_leaf_traits`).
 
 
@@ -413,12 +413,12 @@ Table `r table_leaf_metabolism`, cont.
 
 $\dagger$ Forest types are coded as follows: TrB = tropical broadleaf; TeB = temperate broadleaf; TeN = temperate needleleaf (conifer); BoN= boreal needleleaf (conifer).
 
+<!--refs in this table are in the nocite field at top of document-->
 $\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et al. 1990; 4. Dang et al. 1997; 5. Marenco et al. 2017; 6. Ambrose et al. 2015; 7. Zweifel et al. 2001; 8. Slot et al. 2019; 9. Hernandez et al. 2020; 10. Urban et al. 2007; 11. Carter and Cavaleri 2018; 12. Martin et al. 1999; 13. Mau et al. 2018;  14. Kosugi et al. 2012; 15. Niinemets et al. 2015; 16. Bachofen et al. 2020; 17. Hamerlynck and Knapp 1994; 18. Coble et al. 2017; 19. Wyka et al. 2012; 20. Rijkerse et al. 2000; 21. Ishida et al. 1999; 22. Weerasinghe et al. 2014; 23. Scartazza et al. 2016; 24. Miller et al. 2021; 25. Harris and Medina 2013; 26. Legner et al. 2014; 27. Kitao et al. 2012; 28. Fauset et al. 2018; 29. Rey-Sanchez et al. 2016; 30. Muller et al. 2021; 31. Mier et al. 2001; 32. Turnbull et al. 2003; 33. Araki et al. 2017; 34. Bolstad et al. 1999; 35. Kenzo et al. 2015; 36. Harley et al. 1996; 37. Xu and Griffin 2006; 38. Atherton et al. 2017; 39. Carter et al. 2021; 40. Sack et al. 2003; 41. Slot et al. 2021; 42. Carswell et al. 2000
 
 ** composite climatic stress variable integrating temperature, vapour pressure deficit, and relative humidity is higher in lower canopy
-```{r eval=FALSE, echo=FALSE}
-# refs in this table currently in the nocite field at top of document 
-```
+
+\newpage
 
 ### 4.1. Conductance
 
