proofread through end of traits

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -237,12 +237,14 @@ The basic biophysical principles outlined above shape the tendency for $T_{leaf}
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that upper canopy leaves have much greater tendency for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
 However, higher wind speeds (Fig. `r fig_NEON_vertical`) reduce $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`b, @niinemetsPhotosyntheticAcclimationSimultaneous2004; @bonan_ecological_2016]. 
 In addition, adaptive leaf traits that increase $g_b$ and $g_s$ (see sections 3, 4.1) mediate the direct effects of solar radiation on upper canopy leaves and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). 
-In contrast, greater RH and lower wind speeds in the understory may limit $\lambda E$ (through reduced $g_s$ and $g_b$), thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
+In contrast, at lower heights along the vertical profile, greater RH and lower wind speeds may limit $\lambda E$ (through reduced $g_s$ and $g_b$), thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
+Leaves in these normally-shaded locations experience rapid light and temperature surges (can exceed 10$^\circ$C) during sunflecks [@waySunflecksTreesForests2012].
 
 The propensity for $T_{leaf}$ to be elevated above $T_{air}$ is not expected to be uniform across time and space, but rather to vary with micrometeorological conditions. Under drought conditions (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, there will be a greater propensity for $T_{leaf} - T_{air}$ to be elevated in the upper canopy compared to the understory (Fig. `r fig_leaf_T`).
 This is because sun leaves are exposed to higher irradiance and VPD, and therefore have steeper $g_s$ limitation than shade leaves [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
 In contrast, under conditions conducive to stomatal opening, higher wind speeds and $g_b$ enable cooling in the upper canopy, whereas lower wind and $g_b$ in the understory allow much less evaporative cooling  [Fig. `r fig_leaf_T`b,d, @robertsStomatalBoundaryLayerConductances1990a; @martin_boundary_1999; @leighInfluenceLeafSize2017;  @songTreeSurfaceTemperature2020]. 
-Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipating excess heat compared to upper-canopy leaves. Limitations in heat dissipation, in combination with their physiological propensities, may cause shade leaves to experience above-optimal $T_{leaf}$ under slight heat or drought stress, or when exposed to higher levels of radiation, for example during sunflecks [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013].
+Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipating excess heat compared to upper-canopy leaves. 
+Limitations in heat dissipation, in combination with their physiological propensities, may cause shade leaves to experience above-optimal $T_{leaf}$ under slight heat or drought stress, or when exposed to higher levels of radiation, for example during sunflecks [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013].
 In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH in the understory and inner canopy (Fig. `r fig_NEON_vertical`) would also inhibit cooling, as $\lambda E$ is stifled under high RH, resulting in  greater $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
 
 Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`). 
@@ -331,14 +333,13 @@ Higher photosynthetic rates (per unit leaf area) and more frequent stomatal clos
 ## 3.4. Biochemical protection against foliage light and heat damage
 
 Biochemical protection against foliage light and heat damage increases with peak radiation loads, and thus tends to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
-Further, by reducing photosynthesis, heat and associated stomatal closure from VPD can indirectly reduce the capacity to use light energy for photochemistry, thereby increasing the potential for photoinhibition.
+Further, by reducing photosynthesis, heat and VPD-associated stomatal closure can indirectly reduce the capacity to use light energy for photochemistry, thereby increasing the potential for photoinhibition [@ref <!--Nidhi, I feel like this sentence needs a reference-->].
 Accumulation of excess light energy results in overreduction of the electron transport chain and the formation of harmful reactive oxygen species [@niyogiSafetyValvesPhotosynthesis2000; @suzukiReactiveOxygenSpecies2006a].
 A ubiquitous defense is a rapidly inducible non-photochemical quenching (NPQ) mechanism that responds to the increased thylakoid pH gradient caused by accumulated light energy [@niyogiSafetyValvesPhotosynthesis2000; @gossBiodiversityNPQ2015].
 This form of NPQ is accomplished by the interconversion of xanthophyll cycle pigments—violaxanthin, antheraxanthin, and zeaxanthin (VAZ)—which regulates the capacity for de-excitation of chlorophyll through thermal dissipation instead of photochemistry.
-Due to higher leaf temperatures and hydraulic limitations, upper canopy leaves spend more time with stomata closed, and therefore require a high capacity to dissipate excess light energy [@niinemetsPhotosynthesisResourceDistribution2007].
+Due to higher leaf temperatures and hydraulic limitations, upper canopy leaves spend more time with stomata closed (Table 2), and therefore require a high capacity to dissipate excess light energy [@niinemetsPhotosynthesisResourceDistribution2007].
 Correspondingly, leaves in higher light environments show a greater capacity for NPQ and higher concentrations of VAZ as well as other carotenoids (e.g., beta carotene and lutein) employed as antioxidant defenses [Table `r table_leaf_traits`, @niinemetsAcclimationHighIrradiance1998; @garcia-plazaolaAcclimationAntioxidantPools2004a; @scartazzaInvestigatingEuropeanBeech2016a].
-In contrast, leaves deeper in the canopy experience rapid light and temperature surges (can exceed 10$^\circ$C) during sunflecks [@waySunflecksTreesForests2012].
-In order to maximize carbon uptake and minimize damage during sunflecks, shade-acclimated leaves tend to induce photochemical processes more quickly [@urbanInductionPhotosynthesisImportance2007], and also show a steeper response of NPQ to light compared to sun-acclimated, upper canopy leaves [@scartazzaInvestigatingEuropeanBeech2016a].
+In contrast, in order to maximize carbon uptake and minimize damage during $T_{leaf}$ surges caused by sunflecks (see section 2.2), shade-acclimated leaves tend to induce photochemical processes more quickly [@urbanInductionPhotosynthesisImportance2007], and also show a steeper response of NPQ to light compared to sun-acclimated, upper canopy leaves [@scartazzaInvestigatingEuropeanBeech2016a].
 
 <!--VOCs-->
 Capacity for heat-sensitive, light-dependent (photosynthetically linked) emissions of volatile organic compounds (VOCs), including isoprene and monoterpenes, enhances photosynthetic thermal tolerance by regulating antioxidant defenses and other metabolic processes [@sharkeyIsopreneEmissionPlants2008; @taylorCapacityEmitIsoprene2019; @monsonLeafIsopreneEmission2021; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005; @riedlmeierMonoterpenesSupportSystemic2017]. 
@@ -351,7 +352,7 @@ However, a recent study found a contrasting interspecific vertical structuring o
 Similarly, within tree crowns of European beech, monoterpene emissions were found to be highest in semi-shaded leaves beneath the canopy surface [Table `r table_leaf_traits`, @simpragaVerticalCanopyGradient2013]. 
 This pattern may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average. 
 Temperature sensitive VOC emissions have been hypothesized to enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [see section 1, @sharkeyIsopreneEmissionPlants2008]. 
-Future work seeking to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] with height and influence leaf function will be important for resolving the role of VOCs in forest thermal sensitivity across the vertical gradient. 
+Future work seeking to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] vary with height and influence leaf function will be important for resolving the role of VOCs in forest thermal sensitivity across the vertical gradient. 
 Given current understanding, we may hypothesize that light-dependent VOC emissions are important for mid-canopy thermal responses, while other traits play the same role in sun-exposed canopy leaves.
 
 
@@ -359,7 +360,7 @@ Given current understanding, we may hypothesize that light-dependent VOC emissio
 
 <!--short par giving background on thermal tolerance-->
 The upper thermal thresholds for leaf survival can be approximated by assessing the photosystem II functioning using chlorophyll fluorescence techniques [@krauseHightemperatureToleranceTropical2010]. 
-At very high $T_{leaf}$ (~40-60 $^{\circ}$C), photosystem II incurs irreversible damage, eventually leading to leaf necrosis and death [@bakerChlorophyllFluorescenceProbe2008; @feeley_thermal_2020; @kunertSummerTemperaturesReachinpress]. 
+At very high $T_{leaf}$ (~40-60$^{\circ}$C), photosystem II incurs irreversible damage, eventually leading to leaf necrosis and death [@bakerChlorophyllFluorescenceProbe2008; @feeley_thermal_2020; @kunertSummerTemperaturesReachinpress]. 
 Thermal tolerance is described in terms of the temperature at which efficiency of photosystem II starts to decrease, $T_{crit}$, and the $T_{leaf}$ at which efficiency of photosystem II had decreased by 50%, $T_{50}$ [@slotLeafHeatTolerance2021]. 
 Thermal tolerances vary across species, being more closely linked to leaf traits than phylogeny [@feeley_thermal_2020; @slotLeafHeatTolerance2021]<!--; for example, among tropical species, $T_{crit}$ and $T_{50}$ were found to be high in species with large leaves with high thermal capacitance and those with high LMA, respectively [@slotLeafHeatTolerance2021]-->, and with higher thermal tolerance among leaves that experience higher maximum temperatures [@perezPhotosyntheticHeatTolerances2020].
 $T_{50}$ and $T_{crit}$ decrease across increasing latitudes, and with elevation among tropical forests [@feeley_thermal_2020;  @slotLeafHeatTolerance2021; @osullivanThermalLimitsLeaf2017].
@@ -368,19 +369,19 @@ However, they are more closely adapted to microclimate than macroclimate [@feele
 
 <!--par on thermal tolerance across vertical gradients-->
 Based on their variation with the temperatures experienced by leaves, thermal tolerance metrics are hypothesized to be greatest for the leaves that face the greatest radiation and highest temperatures along the vertical gradient. 
-Indeed, considering sun and shade leaf differences across the vertical profile of a closed-canopy forest in Panama, $T_{50}$ was 0.7 - 1.4 $^\circ$C lower for shade than sun leaves for two of three tree species [Table `r table_leaf_traits`, @slotPhotosyntheticHeatTolerance2019]. 
-Similarly, along a vertical gradient within a very open canopy in Australia, where crowns of *Acacia papyrocarpa* Benth. faced the greatest composite climate stress -- including low wind speed, greater radiation and $T_{air}$, and lower rates of heat dissipation -- in the lower, north-facing portions of their crowns, $T_{50}$ was highest in these positions, *albiet* by <1 $^\circ$C [Table `r table_leaf_traits`, @curtis_intracanopy_2019]. 
+Indeed, considering sun and shade leaf differences across the vertical profile of a closed-canopy forest in Panama, $T_{50}$ was 0.7 - 1.4$^\circ$C lower for shade than sun leaves for two of three tree species [Table `r table_leaf_traits`, @slotPhotosyntheticHeatTolerance2019]. 
+Similarly, along a vertical gradient within a very open canopy in Australia, where crowns of *Acacia papyrocarpa* Benth. faced the greatest composite climate stress (low wind speed, greater radiation and $T_{air}$, and lower rates of heat dissipation) in the lower, north-facing portions of their crowns, $T_{50}$ was highest in these positions, *albiet* by <1$^\circ$C [Table `r table_leaf_traits`, @curtis_intracanopy_2019]. 
 These modest difference in $T_{50}$ coupled with larger differences in $T_{leaf}$ across thermal microenvironments imply that more thermally tolerant sun leaves tend to operate closer to their thermal limits and could therefore be more vulnerable to heat anomalies [@perezPhotosyntheticHeatTolerances2020].
 However, not enough studies have evaluated thermal tolerances across vertical gradients to make robust inferences.
 
 ## 3.6. Leaf phenology
 
-The vertical structure of microenvironments likely influences forest photosynthetic capacity [@rey-sanchez_spatial_2016] via leaf phenology. 
+Leaf phenology likely influences the vertical structure of microenvironments, $T_{leaf}$, and forest photosynthetic capacity [@rey-sanchez_spatial_2016]. 
 In deciduous forests, the timing and extent of seasonal leaf gain and loss is structured across the vertical profile. 
 In temperate deciduous forests, seasonal warming occurs earlier in the sheltered understory, facilitating earlier spring bud-break compared to the cooler upper canopy [@augspurgerDifferencesLeafPhenology2003]. 
-Early leaf-out allows some tree seedlings to do the majority of their annual carbon fixation before canopy foliage and reduces light availability [@leeSpringPhenologicalEscape2021]. 
+Early leaf-out gives tree saplings and seedlings a window for disproportionately high photosynthesis -- amounting to the majority of annual carbon fixation for some seedlings -- before canopy foliage and reduces light availability [@augspurgerDifferencesLeafPhenology2003; @leeSpringPhenologicalEscape2021]. 
 Within tropical dry-season-deciduous species, the fraction of seasonally deciduous individuals has been found to increase toward larger tree size classes in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c].
-Similarly, on the interspecific level, across increasing tree size classes, there is an increase in the fractions of species that are deciduous [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018].
+Similarly, on the interspecific level, across increasing tree size classes, there is an increase in the fractions of deciduous species [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018].
 Even in evergreen tropical forests, seasonal variation in leaf quantities follows distinct patterns throughout the vertical profile depending on height and light environments [@smithSeasonalDroughtrelatedChanges2019].
 Leaf turnover is faster in the upper canopy than the understory [@osadaLeafDynamicsMaintenance2001], and as a result upper canopy leaves are, on average, younger than shade leaves.
 Leaf age distributions affect forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] and stress tolerance via age specific leaf function [@albertAgedependentLeafPhysiology2018; @kikuzawaSynthesisRelationshipsLeaf2006; @mariasImpactsLeafAge2017; @zhouLeafageEffectsTemperature2015].
@@ -417,7 +418,6 @@ $\dagger$ Forest types are coded as follows: TrB = tropical broadleaf; TeB = tem
 $\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et al. 1990; 4. Dang et al. 1997; 5. Marenco et al. 2017; 6. Ambrose et al. 2015; 7. Zweifel et al. 2001; 8. Slot et al. 2019; 9. Hernandez et al. 2020; 10. Urban et al. 2007; 11. Carter and Cavaleri 2018; 12. Martin et al. 1999; 13. Mau et al. 2018;  14. Kosugi et al. 2012; 15. Niinemets et al. 2015; 16. Bachofen et al. 2020; 17. Hamerlynck and Knapp 1994; 18. Coble et al. 2017; 19. Wyka et al. 2012; 20. Rijkerse et al. 2000; 21. Ishida et al. 1999; 22. Weerasinghe et al. 2014; 23. Scartazza et al. 2016; 24. Miller et al. 2021; 25. Harris and Medina 2013; 26. Legner et al. 2014; 27. Kitao et al. 2012; 28. Fauset et al. 2018; 29. Rey-Sanchez et al. 2016; 30. Muller et al. 2021; 31. Mier et al. 2001; 32. Turnbull et al. 2003; 33. Araki et al. 2017; 34. Bolstad et al. 1999; 35. Kenzo et al. 2015; 36. Harley et al. 1996; 37. Xu and Griffin 2006; 38. Atherton et al. 2017; 39. Carter et al. 2021; 40. Sack et al. 2003; 41. Slot et al. 2021; 42. Carswell et al. 2000
 
 ** composite climatic stress variable integrating temperature, vapour pressure deficit, and relative humidity is higher in lower canopy
-
 \newpage
 
 ### 4.1. Conductance
